1st commit for uploading

--- a/package.json
+++ b/package.json
@@ -32,12 +32,7 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ]
+    "rules": {"vue/multi-word-component-names": "off"}
+  }
+  
 }
